{
  "version": 4,
  "terraform_version": "0.14.5",
  "serial": 127,
  "lineage": "07619b31-4883-9384-2ee2-66323ac7165f",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "IGW_for_demo_site",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:984547102228:internet-gateway/igw-07d35673efb551ed3",
            "id": "igw-07d35673efb551ed3",
            "owner_id": "984547102228",
            "tags": {
              "Name": "IGW_for_demo_site",
              "Owner": "Snyatkov_V",
              "Project": "Demo-site"
            },
            "vpc_id": "vpc-019e0f4cd3c3cc452"
          },
          "dependencies": [
            "aws_vpc.Demo_site_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "ALB_for_demo_site",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:eu-north-1:984547102228:loadbalancer/app/alb-for-demo-site/c2aa599ff634af51",
            "arn_suffix": "app/alb-for-demo-site/c2aa599ff634af51",
            "dns_name": "alb-for-demo-site-391335796.eu-north-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "id": "arn:aws:elasticloadbalancing:eu-north-1:984547102228:loadbalancer/app/alb-for-demo-site/c2aa599ff634af51",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "alb-for-demo-site",
            "security_groups": [
              "sg-055a96f839c6e82c5"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-06675c24819a71b55"
              },
              {
                "subnet_id": "subnet-08936c67a51af098e"
              }
            ],
            "subnets": [
              "subnet-06675c24819a71b55",
              "subnet-08936c67a51af098e"
            ],
            "tags": {
              "Name": "ALB for demo site",
              "Owner": "Snyatkov_V",
              "Project": "Demo-site"
            },
            "vpc_id": "vpc-019e0f4cd3c3cc452",
            "zone_id": "Z23TAZ6LKFMNIO"
          },
          "dependencies": [
            "aws_security_group.SG_for_ALB",
            "aws_subnet.Demo_site_subnet_1",
            "aws_subnet.Demo_site_subnet_2",
            "aws_vpc.Demo_site_vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "LB_listener_for_demo_site",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:eu-north-1:984547102228:listener/app/alb-for-demo-site/c2aa599ff634af51/7dcfcc6e757c20e3",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [
                  {
                    "host": "#{host}",
                    "path": "/#{path}",
                    "port": "443",
                    "protocol": "HTTPS",
                    "query": "#{query}",
                    "status_code": "HTTP_301"
                  }
                ],
                "target_group_arn": "",
                "type": "redirect"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-north-1:984547102228:listener/app/alb-for-demo-site/c2aa599ff634af51/7dcfcc6e757c20e3",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:eu-north-1:984547102228:loadbalancer/app/alb-for-demo-site/c2aa599ff634af51",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.ALB_for_demo_site"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "LB_listener_for_demo_site_443",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:eu-north-1:984547102228:listener/app/alb-for-demo-site/c2aa599ff634af51/2ebd247c05e63f72",
            "certificate_arn": "arn:aws:acm:eu-north-1:984547102228:certificate/d37af21a-ca4d-4644-9eb4-619c1799f4ef",
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:eu-north-1:984547102228:targetgroup/tg-for-demo-site/ba0cd1fa807f568f",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-north-1:984547102228:listener/app/alb-for-demo-site/c2aa599ff634af51/2ebd247c05e63f72",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:eu-north-1:984547102228:loadbalancer/app/alb-for-demo-site/c2aa599ff634af51",
            "port": 443,
            "protocol": "HTTPS",
            "ssl_policy": "ELBSecurityPolicy-2016-08",
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.ALB_for_demo_site",
            "aws_lb_target_group.TG_for_demo_site",
            "aws_security_group.SG_for_ALB",
            "aws_subnet.Demo_site_subnet_1",
            "aws_subnet.Demo_site_subnet_2",
            "aws_vpc.Demo_site_vpc",
            "data.aws_acm_certificate.issued",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener_rule",
      "name": "Rule_LB_listener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:eu-north-1:984547102228:targetgroup/tg-for-demo-site/ba0cd1fa807f568f",
                "type": "forward"
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:eu-north-1:984547102228:listener-rule/app/alb-for-demo-site/c2aa599ff634af51/7dcfcc6e757c20e3/996c3d7b3f099da8",
            "condition": [
              {
                "host_header": [
                  {
                    "values": [
                      "ec2.snyatkov.site"
                    ]
                  }
                ],
                "http_header": [],
                "http_request_method": [],
                "path_pattern": [],
                "query_string": [],
                "source_ip": []
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-north-1:984547102228:listener-rule/app/alb-for-demo-site/c2aa599ff634af51/7dcfcc6e757c20e3/996c3d7b3f099da8",
            "listener_arn": "arn:aws:elasticloadbalancing:eu-north-1:984547102228:listener/app/alb-for-demo-site/c2aa599ff634af51/7dcfcc6e757c20e3",
            "priority": 100
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.ALB_for_demo_site",
            "aws_lb_listener.LB_listener_for_demo_site",
            "aws_lb_target_group.TG_for_demo_site",
            "aws_security_group.SG_for_ALB",
            "aws_subnet.Demo_site_subnet_1",
            "aws_subnet.Demo_site_subnet_2",
            "aws_vpc.Demo_site_vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "TG_for_demo_site",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:eu-north-1:984547102228:targetgroup/tg-for-demo-site/ba0cd1fa807f568f",
            "arn_suffix": "targetgroup/tg-for-demo-site/ba0cd1fa807f568f",
            "deregistration_delay": 300,
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 15,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 3,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-north-1:984547102228:targetgroup/tg-for-demo-site/ba0cd1fa807f568f",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "tg-for-demo-site",
            "port": 80,
            "protocol": "HTTP",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-019e0f4cd3c3cc452"
          },
          "dependencies": [
            "aws_vpc.Demo_site_vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "add_route_to_IGT",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-07d35673efb551ed3",
            "id": "r-rtb-01f75c613b9d5e2a81080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-01f75c613b9d5e2a8",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": null,
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.IGW_for_demo_site",
            "aws_vpc.Demo_site_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "EC2_security",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:984547102228:security-group/sg-057ef057d9ab8a146",
            "description": "Allow inbound traffic to 80, 22, 8881 ports",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-057ef057d9ab8a146",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "22 from VPC",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "http from VPC",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "8881 from VPC",
                "from_port": 8881,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8881
              }
            ],
            "name": "SG_port_80_8881_22",
            "name_prefix": "",
            "owner_id": "984547102228",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "SG ports 80 22 8881",
              "Owner": "Snyatkov_V",
              "Project": "Demo-site"
            },
            "timeouts": null,
            "vpc_id": "vpc-019e0f4cd3c3cc452"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.Demo_site_vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "SG_for_ALB",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:984547102228:security-group/sg-055a96f839c6e82c5",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-055a96f839c6e82c5",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "SG_for_ALB",
            "name_prefix": "",
            "owner_id": "984547102228",
            "revoke_rules_on_delete": false,
            "tags": {},
            "timeouts": null,
            "vpc_id": "vpc-019e0f4cd3c3cc452"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.Demo_site_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "Demo_site_subnet_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:984547102228:subnet/subnet-06675c24819a71b55",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-north-1a",
            "availability_zone_id": "eun1-az1",
            "cidr_block": "10.0.1.0/24",
            "id": "subnet-06675c24819a71b55",
            "map_public_ip_on_launch": true,
            "owner_id": "984547102228",
            "tags": {
              "Name": "Demo_site_subnet_1",
              "Owner": "Snyatkov_V",
              "Project": "Demo-site"
            },
            "vpc_id": "vpc-019e0f4cd3c3cc452"
          },
          "dependencies": [
            "aws_vpc.Demo_site_vpc",
            "data.aws_availability_zones.available"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "Demo_site_subnet_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:984547102228:subnet/subnet-08936c67a51af098e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-north-1b",
            "availability_zone_id": "eun1-az2",
            "cidr_block": "10.0.2.0/24",
            "id": "subnet-08936c67a51af098e",
            "map_public_ip_on_launch": true,
            "owner_id": "984547102228",
            "tags": {
              "Name": "Demo_site_subnet_2",
              "Owner": "Snyatkov_V",
              "Project": "Demo-site"
            },
            "vpc_id": "vpc-019e0f4cd3c3cc452"
          },
          "dependencies": [
            "aws_vpc.Demo_site_vpc",
            "data.aws_availability_zones.available"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "Demo_site_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:984547102228:vpc/vpc-019e0f4cd3c3cc452",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0237bf3fc9b8398ba",
            "default_route_table_id": "rtb-01f75c613b9d5e2a8",
            "default_security_group_id": "sg-0892ae12e76721f7f",
            "dhcp_options_id": "dopt-04f24a6d",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-019e0f4cd3c3cc452",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-01f75c613b9d5e2a8",
            "owner_id": "984547102228",
            "tags": {
              "Name": "Demo_site_vpc",
              "Owner": "Snyatkov_V",
              "Project": "Demo-site"
            }
          },
          "create_before_destroy": true
        }
      ]
    }
  ]
}